--- a/.env
+++ b/.env
@@ -3,5 +3,10 @@ CLIENT_ID=5f93c4fce0ca4dd69d3352aa2e08d308
 CLIENT_SECRET=c5b010ae2f4342528d3fb97cd20ee09c
 MONGODB_PASSWORD="V.h3l3n4"
 
+# cloudinary keys 
+# we should add the following:
+CLOUDINARY_NAME=dp9ujerbe
+CLOUDINARY_KEY=644232938765946
+CLOUDINARY_SECRET=Fhhzm5rRfUzzsQyOViEHQ32DFPY 
 
 mongodb+srv://avelarvicky:V.h3l3n4@spotify-friends.36nfzjn.mongodb.net/?retryWrites=true&w=majority
